--- a/certificates.html
+++ b/certificates.html
@@ -8,7 +8,13 @@
     <meta name="description" content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#555555">
-    <title>Seif El-Din Sweilam</title>
+    <meta property="og:type" content="website">
+    <link rel="alternate" href="https://saifsweelam.github.io/" hreflang="en">
+    <title>Seif El-Din Sweilam - Certificates</title>
+
+    <!--Thumbnail Image-->
+    <link rel="image_src" href="images/display-picture.jpg">
+    <meta property="og:image" content="images/display-picture.jpg">
 
     <!--Google Font "Cairo"-->
     <link rel="stylesheet" href="CSS/cairo.css">
