--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#555555">
     <meta property="og:type" content="website">
+    <link rel="alternate" href="https://saifsweelam.github.io/" hreflang="en">
     <title>Seif El-Din Sweilam - Full Stack Web Developer</title>
 
     <!--Thumbnail Image-->
@@ -27,7 +28,6 @@
     <!--Bootstrap 4-->
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script src="JS/bootstrap.min.js"></script>
-
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="CSS/styles.css">
