--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,13 @@
     <meta name="description" content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#555555">
+    <meta property="og:type" content="website">
+    <link rel="alternate" href="https://saifsweelam.github.io/" hreflang="en">
     <title>Seif El-Din Sweilam - Projects Portfolio</title>
+
+    <!--Thumbnail Image-->
+    <link rel="image_src" href="images/display-picture.jpg">
+    <meta property="og:image" content="images/display-picture.jpg">
 
     <!--Google Font "Cairo"-->
     <link rel="stylesheet" href="CSS/cairo.css">
@@ -56,9 +62,9 @@
 
     <header id="page-header" class="text-white text-center pt-5">
         <div class="container p-5">
-            <p class="text-left html-tags">&lt;details&gt;</p>
+            <p class="text-left html-tags">&lt;projects&gt;</p>
             <h1 class="display-3">Portfolio</h1>
-            <p class="text-right html-tags">&lt;&#47;details&gt;</p>
+            <p class="text-right html-tags">&lt;&#47;projects&gt;</p>
             <p class="mt-5 h3">Discover my projects.</p>
             <a href="mailto:saifsweelam@gmail.com" class="btn btn-secondary">Hire Now!</a>
         </div>
