--- a/404.html
+++ b/404.html
@@ -4,20 +4,30 @@
 <head>
     <!--meta-->
     <meta charset="UTF-8">
-    <meta name="description"
-        content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
+    <meta name="description" content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#555555">
-    <title>Page Not Found</title>
+    <meta property="og:type" content="website">
+    <link rel="alternate" href="https://saifsweelam.github.io/" hreflang="en">
+    <title>Page Not Found - Seif El-Din Sweilam</title>
+
+    <!--Thumbnail Image-->
+    <link rel="image_src" href="/images/display-picture.jpg">
+    <meta property="og:image" content="/images/display-picture.jpg">
+
     <!--Google Font "Cairo"-->
-    <link rel="stylesheet" href="CSS/cairo.css">
+    <link rel="stylesheet" href="/CSS/cairo.css">
+
     <!--jQuery 3.5-->
-    <script src="JS/jquery.min.js"></script>
+    <script src="/JS/jquery.min.js"></script>
+
     <!--Bootstrap 4-->
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <script src="JS/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/CSS/bootstrap.min.css">
+    <script src="/JS/bootstrap.min.js"></script>
+
     <!--Custom CSS-->
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/styles.css">
+
     <!--favicon-->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
@@ -35,11 +45,11 @@
 
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto text-center">
-                    <li class="nav-item w-100"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home</a></li>
-                    <li class="nav-item w-100"><a href="index.html#about" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                    <li class="nav-item w-100"><a href="certificates.html" class="nav-link text-uppercase font-weight-bold">Certificates<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item w-100"><a href="portfolio.html" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
-                    <li class="nav-item w-100"><a href="mailto:saifsweelam@gmail.com" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
+                    <li class="nav-item w-100"><a href="/index.html" class="nav-link text-uppercase font-weight-bold">Home</a></li>
+                    <li class="nav-item w-100"><a href="/index.html#about" class="nav-link text-uppercase font-weight-bold">About</a></li>
+                    <li class="nav-item w-100"><a href="/certificates.html" class="nav-link text-uppercase font-weight-bold">Certificates<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item w-100"><a href="/portfolio.html" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
+                    <li class="nav-item w-100"><a href="/mailto:saifsweelam@gmail.com" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -52,13 +62,13 @@
             <h1 class="display-1">404 Not Found</h1>
             <p class="text-right html-tags">&lt;&#47;error&gt;</p>
             <p class="mt-5 h3">The page you requested couldn't be found.</p>
-            <a href="index.html" class="btn btn-secondary">Return Home</a>
+            <a href="/index.html" class="btn btn-secondary">Return Home</a>
         </div>
     </header>
 
     <div id="footage"></div>
     <!--Custom scripts-->
-    <script src="JS/navbar.js"></script>
+    <script src="/JS/navbar.js"></script>
 </body>
 
 </html>
