--- a/index.html
+++ b/index.html
@@ -212,21 +212,20 @@
                     <p>A <code>node.js</code> web application for advertising perfumes using <code>MongoDB</code> database.</p>
                     <div>
                         <a href="https://misk-website.herokuapp.com/" target="_blank" class="btn btn-warning">View Demo</a>
-                        <a href="https://github.com/saifsweelam/misk" target="_blank" class="btn btn-warning">View Code</a>
                     </div>
                 </div>
             </div>
             <div class="row mobile-reverse mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-left">
                 <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
-                    <h3 class="left">Get Your Identity</h3>
-                    <p>You enter a name and wait for magic to happen. The website sends <code>AJAX</code> requests to multiple sites to get a fake identity for you.</p>
+                    <h3 class="left">"Shohra" Website Design</h3>
+                    <p>A website designed using <code>Angular</code> for Social Marketing.</p>
                     <div>
-                        <a href="https://saifsweelam.github.io/get-your-identity/" target="_blank" class="btn btn-warning">View Website</a>
-                        <a href="https://github.com/saifsweelam/get-your-identity" target="_blank" class="btn btn-warning">View Code</a>
+                        <a href="https://shoohra.netlify.app/" class="btn btn-warning" target="_blank">Visit</a>
+                        <a href="https://github.com/saifsweelam/shohra" class="btn btn-warning" target="_blank">View Code</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-3">
-                    <div class="project-img" id="identity-img"></div>
+                    <div class="project-img" id="shohra-img"></div>
                 </div>
             </div>
             <div class="row mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-right">
@@ -244,15 +243,15 @@
             </div>
             <div class="row mobile-reverse mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-left">
                 <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
-                    <h3 class="left">Python Expression Calculator</h3>
-                    <p>A <code>tkinter</code> Calculator application which evaluates a mathematical expression and gives the user a result</p>
+                    <h3 class="left">Get Your Identity</h3>
+                    <p>You enter a name and wait for magic to happen. The website sends <code>AJAX</code> requests to multiple sites to get a fake identity for you.</p>
                     <div>
-                        <a href="https://repl.it/@SeifElDinElDin1/FruitfulBowedInstitutes" class="btn btn-warning" target="_blank">Try Online</a>
-                        <a href="https://github.com/saifsweelam/Python-Expression-Calculator/blob/master/script.py" class="btn btn-warning" target="_blank">View Code</a>
+                        <a href="https://saifsweelam.github.io/get-your-identity/" target="_blank" class="btn btn-warning">View Website</a>
+                        <a href="https://github.com/saifsweelam/get-your-identity" target="_blank" class="btn btn-warning">View Code</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-3">
-                    <div class="project-img" id="calc-img"></div>
+                    <div class="project-img" id="identity-img"></div>
                 </div>
             </div>
         </div>
@@ -278,11 +277,7 @@
                 <div class="col-12 col-sm-7 col-md-8 h5 d-flex justify-content-around align-items-center flex-column p-5 text-center">
                     <div><span class="font-weight-bold">Name: </span>Seif El-Din Wael Sweilam</div>
                     <div>
-                        <span class="font-weight-bold">Age: </span>
-                        <script>
-                            let age = parseInt((Date.now() - new Date(2002, 6, 10)) / (1000 * 60 * 60 * 24 * 365));
-                            document.write(`${age} years`)
-                        </script>
+                        <span class="font-weight-bold">Age: </span>18 years
                     </div>
                     <div><span class="font-weight-bold">Origin: </span>Egypt</div>
                     <div><span class="font-weight-bold">Languages: </span>Arabic & English</div>
