--- a/portfolio.html
+++ b/portfolio.html
@@ -112,21 +112,33 @@
                     </div>
                 </div>
             </div>
-            <div class="row mobile-reverse mt-2 mb-2">
+            <div class="row mobile-reverse mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-left">
                 <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
-                    <h3 class="left">Python Expression Calculator</h3>
+                    <h3 class="left">"Shohra" Website Design</h3>
+                    <p>A website designed using <code>Angular</code> for Social Marketing.</p>
+                    <div>
+                        <a href="https://shoohra.netlify.app/" class="btn btn-warning" target="_blank">Visit</a>
+                        <a href="https://github.com/saifsweelam/shohra" class="btn btn-warning" target="_blank">View Code</a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-3">
+                    <div class="project-img" id="shohra-img"></div>
+                </div>
+            </div>
+            <div class="row mt-2 mb-2">
+                <div class="col-md-4 col-sm-3">
+                    <div class="project-img" id="calc-img"></div>
+                </div>
+                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
+                    <h3 class="right">Python Expression Calculator</h3>
                     <p>A <code>tkinter</code> Calculator application which evaluates a mathematical expression and gives the user a result</p>
                     <div>
                         <a href="https://repl.it/@SeifElDinElDin1/FruitfulBowedInstitutes" class="btn btn-warning" target="_blank">Try Online</a>
                         <a href="https://github.com/saifsweelam/Python-Expression-Calculator/blob/master/script.py" class="btn btn-warning" target="_blank">View Code</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-3">
-                    <div class="project-img" id="calc-img"></div>
-                </div>
             </div>
         </div>
-        <a href="portfolio.html" class="btn btn-secondary d-block w-100">View Full Portfolio</a>
     </section>
 
     <div id="footage"></div>
