Add Angular to skills

--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
             <div class="row justify-content-center collapsed ml-auto mr-auto" id="frontend-list">
                 <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-angular"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Angular</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
+                    <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-html5"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
                             <h4>HTML5</h4>
